package org.example;

public class Teacher extends User{
       public Teacher(String name)
       {
        super(name, -1);
    }



}
